# 1lose

./: .gitignore  docker-compose.yml  lines.py  pyproject.toml
backend/: alembic.ini  main.py
backend/alembic/: env.py
backend/alembic/versions/: 012943489ed2_create_access_token_table.py  0991a7155f74_add_win_event_column.py  0c17698f52bc_update_user_table.py  1d8146ca53f1_add_outcome_id_in_bet_table.py  23f92e758cf1_create_map_table.py  26b15c39429a_create_bet_table.py  26e82beb819a_add_win_event_column.py  26f802bbc5c6_delete_outcome_fields_and_create_event_.py  2909544decc0_create_business_settings_table.py  370c954b5cd3_add_timestamp.py  3d9bbf1bbbb0_add_icon_path_field_in_game_model.py  51a51d7f25a4_add_default_value_for_role.py  546db49ea6f4_add_game_id_field.py  58812c4686c2_create_tournament_table.py  59027238546f_create_match_model.py  621a15a1895e_create_a_access_token_model.py  7bb9758fd714_add_icon_path_field_in_ea_team.py  8524140394dc_create_event_outcame_tables.py  8b3824544d04_make_a_one2one.py  9387aff5557d_create_a_user_table_and_user_role_table.py  99e754a0653c_add_ea_team_table.py  a15b720467be_create_game_id_field.py  ce64368294bb_add_game_table.py  d310f946ca40_create_outcome_type_model_and_nullable_.py
backend/api/: __init__.py  auth.py  bet.py  business_settings.py  event.py  event_type.py  games.py  map.py  match.py  teams.py  tournament.py  users.py
backend/core/: config.py
backend/core/auth/: jwt.py  transport.py  (+1 more)
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  main.jsx  routes.jsx
(+154 files in other folders)
